--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,16 @@
 name: CMake Build
-
-on: push
-
+on:
+ push:
 jobs:
-  build:
+ build-project:
+ name: Build Project
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+ - name: Checkout
+        uses: actions/checkout@v4.1.2
 
-    - name: Install dependencies
-      run: sudo apt-get install -y cmake gcc g++
+ - name: Configure and Build Project
+        uses: threeal/cmake-action@main
 
-    - name: Build
-      run: |
-        cmake ..
-        make
-    - name: Upload executable
-      uses: actions/upload-artifact@v2
-      with:
-        name: executable
-        path: build/executable
+ - name: Upload executable
+        uses: actions/upload-artifact@v2
