--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,13 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Create Build Directory
-      run: cmake -E make_directory ${{github.workspace}}/build
+      run: mdkir build
 
     - name: Install dependencies
       run: sudo apt-get install -y cmake gcc g++
 
     - name: Configure CMake
-      run: cmake -S . -B ./build
+      run: cmake -H . -B ./build
 
     - name: Build
       run: cmake --build ./build
