--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,16 +10,16 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Create Build Directory
-      run: mdkir build
+      run: mkdir _build
 
     - name: Install dependencies
       run: sudo apt-get install -y cmake gcc g++
 
     - name: Configure CMake
-      run: cmake -H . -B ./build
+      run: cmake -H . -B _build
 
     - name: Build
-      run: cmake --build ./build
+      run: cmake --build _build
 
     - name: Create Artifact
       run: |
