--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "googletest"]
 	path = googletest
 	url = https://github.com/google/googletest.git
+[submodule "third-party/gtest"]
+	path = third-party/gtest
+	url = https://github.com/google/googletest.git
